--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 	<script type="text/javascript" src="js/angular/other/main.js"></script>
 </head>
 <body ng-app="main" ng-controller="resumeController" ng-init="page=0" style="background-color: #9ee6ff">
-	<!--script language="javascript">
-		alert('Welcome to Harshal\'s place!');
-	</script-->
+	<script language="javascript">
+		alert('Welcome to Harshal\'s profile!');
+	</script>
 	<div class="home" ng-show="page==0" style="margin: 0 auto; margin-left: 200px; margin-top: 200px; height: 80%; width: 85%;">
 		<div class="image" style="float: left; border: 3px solid; border-radius: 12px;">
-			<img src="../images/image.jpg" align="left" height="332px" width="300px">
+			<img src="images/image.jpg" align="left" height="332px" width="300px">
 		</div>
 		<div class="intro" style="float: right; margin-right: 210px;">
 			<h2>Harshal Chavan.</h2>
