--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</div>
 	<div class="others" ng-show="page!=0" style="margin-top: 200px;"> 
 		<div class="sidebar" style="width: 28%; height: 550px; border-right: 2px solid; float: left;">
-			<center><img src="../images/image.jpg" align="left" height="166px" width="150px"/></center>
+			<center><img src="images/image.jpg" align="left" height="166px" width="150px"/></center>
 			<center><p><b>Harshal Chavan</b></p></center>
 			<center><p><b>B.Tech. (CSE)</b></p></center>
 			<center><p><b>Walchand College of Engineering, Sangli</b></p></center>
