--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<div class="skills" ng-show="page==2">
 				<center><h3>Technical Skills</h3></center>
 				<ul ng-repeat="image in images" style="display: inline-block; width: 18%; list-style-type: none;">
-						<li style="margin-right: -150px;"><img ng-src="{{ image.image }}" style="height: 50%; width: 50%; border:1.2px solid; padding: 10px;"></li>
+						<li style="margin-right: -150px;"><img ng-src="{{ image }}" style="height: 50%; width: 50%; border:1.2px solid; padding: 10px;"></li>
 				</ul>
 			</div>
 			<div class="projects" ng-show="page==3">
